security_group/main.tf
resource "aws_security_group" "alb_sg" {
  name        = "ALB Security Group"
  description = "Application Load Balancer Security Group"
  vpc_id      = var.vpc_id
  ingress = [{
      from_port        = 443
      to_port          = 443
      protocol         = "tcp"
      cidr_blocks      = ["0.0.0.0/0"]
      description      = "Allow HTTP Access On Port 443"
      ipv6_cidr_blocks = []
      prefix_list_ids = []
      security_groups = []
      self = false

    },
  {   from_port        = 80
      to_port          = 80
      protocol         = "tcp"
      cidr_blocks      = ["0.0.0.0/0"]
      description      = "Allow HTTP Access On Port 80"
      ipv6_cidr_blocks = []
      prefix_list_ids = []
      security_groups = []
      self = false
   }
  ]

  egress {
    from_port   = 0
    to_port     = 0
    protocol    = "-1"
    cidr_blocks = ["0.0.0.0/0"]
  }
}

resource "aws_security_group" "ecs_sg" {
  name        = "ECS Security Group"
  description = "ECS Task Security Group"
  vpc_id      = var.vpc_id
  ingress {
    from_port       = var.docker_container_port
    to_port         = var.docker_container_port
    protocol        = "tcp"
    security_groups = [aws_security_group.alb_sg.id]
  }

  egress {
    from_port   = 0
    to_port     = 0
    protocol    = "-1"
    cidr_blocks = ["0.0.0.0/0"]
  }
}
